--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	archiveFileName = 'app.jar'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
