#1 Resilience4j 서킷 브레이커 , 리트라이 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,19 @@ java {
 	sourceCompatibility = '17'
 }
 
+
+
+dependencyManagement {
+	imports {
+		mavenBom("io.github.resilience4j:resilience4j-bom:2.1.0");
+	}
+}
+
 repositories {
-	mavenCentral()
+	mavenCentral();
+	maven {
+		url = uri("https://oss.sonatype.org/content/repositories/snapshots");
+	}
 }
 
 bootJar {
@@ -23,6 +34,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	implementation("io.github.resilience4j:resilience4j-spring-boot3")
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation("io.github.resilience4j:resilience4j-reactor")
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
